# dateparser_en_gb

./: .gitignore  README.md  setup.cfg
dateparser_en_gb/: __init__.py
tests/: tdates.py  tdates.txt
