[metadata]
name = dateparser_en_gb
version = 1.0.1
author = C Johnson
description = Finds dates in strings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johns1c/dateparser_en_gb
project_urls =
    Bug Tracker = https://github.com/johns1c/dateparser_en_gb/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
    packages = find:
